css/style.css
div, span, p, h1, h2, h3 {
  padding: 0;
  margin: 0;
}

p {
  margin: 0 0 1em 0;
}

:root {
  --side-bar-width: 12em;
  --content-width: 43em;
  --side-bar-content-divider: 1em;
}

body {
  width: calc(var(--side-bar-width) + var(--content-width) + var(--side-bar-content-divider));
  margin: 4em auto 4em auto;
  background: transparent;
}

#header {
  display: block;
  clear: both;
  min-height: 3.5em;
}

#header-side {
  display: block;
  float: left;
  width: var(--side-bar-width);
}

#header-content {
  display: block;
  float: left;
  width: var(--content-width);
  padding-left: var(--side-bar-content-divider);
  min-height: 2em;
}

.subheading {
  font-size: 0.8em;
  display: block;
}

#name {
  font-weight: bold;
  text-decoration: none;
}


#side-bar {
  float: left;
  width: var(--side-bar-width);
}

#side-bar a {
  display: block;
  text-decoration: none;
  text-align: right;
}

h1 {
  font-size: 1.47em;
}

h2 {
  font-size: 1.25em;
}

h3 {
  font-size: 1em;
}

#content {
  float: right;
  width: var(--content-width);
  padding-left: var(--side-bar-content-divider);
}

#footer {
  clear: both;
  display: block;
  width: var(--content-width);
}

.contact-wrapper {
  display: block;
}

#subtitle {
  font-size: 11px;
}

#email {
  font-size:12px;
  padding-left: 1em;
}

#address {
  font-size: 12px;
  padding-left: 1em;
}


a {
  color: #2E294E;
}
a:active {
  color: #2E294E;
}
a:visited {
  color: #221E39;
}
a:hover {
  color: #67637E;
}

a.people, .people a{
  font-stye
  color: #C6035F;
}
a:hover.people, .people a:hover {
  color: #E34791;
}
a:visited.people, .people a:visited {
  color: #DC1975;
}

.paper-description {
  font-size: 10px;
  display: block;
  margin-top: 0.5rem;
}

ul {
  padding-left: 1.5em;
}

ol {
  padding-left: 1.5em;
}

li {
  margin: 0.5em 0;
}
li p {
  margin: 0;
}

.paper-title {
  font-style: italic;
}
a:hover.paper, .paper a:hover {
  color: #A17EBE;
}
a:visited.paper, .paper a:visited {
  color: #8253A8;
}

a.MR {
  color: #FF595E;
}
a:hover.MR {
  color: #FF8689;
}
a:visited.MR {
  color: #FF686C;
}

dl {
  margin-bottom: 2em;
  padding: 0;
}

dd {
  padding-left: 0.5em;
  border-left: 1px solid black;
}

dt {
  position: relative;
  left: 0;
  width: 3em;
  font-weight: bold;
  top: 1.38em;
}

.phantom {
  color: white;
}

.speaker {
}

.title {
  font-style: italic;
}

.references {
  font-style: monospace;
}

.schedule-first {
  color: indigo;
}

.schedule-second {
  color: forestgreen;
}

/* Tables */

th {
    background-color: #AE97FF;
}
tr:nth-child(even){
  background-color: #f2f2f2;
}
td:nth-child(2) {
  text-align:center;
}
td:nth-child(1) {
  text-align:center;
}
td {
  padding: 2px 10px;
}

